@@ -6,6 +6,7 @@ import com.google.common.collect.Maps;
 import jakarta.inject.Provider;
 import java.sql.Timestamp;
 import java.time.Clock;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -802,10 +803,11 @@ public class WorkspacesController implements WorkspacesApiDelegate {
   public ResponseEntity<Void> startWorkspaceMigration(
       String workspaceNamespace, String terraName, StartWorkspaceMigrationRequest request) {
 
-    List<String> folders =
-        request != null && request.getFolders() != null ? request.getFolders() : List.of();
-
-    workspaceMigrationService.startWorkspaceMigration(workspaceNamespace, terraName, folders);
+    workspaceMigrationService.startWorkspaceMigration(
+        workspaceNamespace,
+        terraName,
+        request != null ? Collections.singletonList(request.getFolders().toString()) : null,
+        request != null ? Collections.singletonList(request.getPodId()).toString() : null);
 
     return ResponseEntity.ok().build();
   }
